--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="recipe hidden" id="recipe"></div>
         </main>
         <footer>
-            This AI project was coded by <a href="https://github.com/mymehrnaz/" target="_blank">Mehrnaz Sadeghian</a> and is <a href="" target="_blank">open-souced on GitHub</a> and is <a href="" target="_blank">hosted on netlify</a>
+            This AI project was coded by <a href="https://github.com/mymehrnaz/" target="_blank">Mehrnaz Sadeghian</a> and is <a href="https://github.com/mymehrnaz/recipe-generator" target="_blank">open-souced on GitHub</a> and is <a href="https://resplendent-cassata-1d7a76.netlify.app/" target="_blank">hosted on netlify</a>
             
         </footer>
     </div>
