--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/styles.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <title>AI Recipe Generator</title>
 </head>
 <body>
@@ -15,9 +16,9 @@
         </header>
         <main>
             <div class="form-container">
-                <form id="Recipe-generator-form">
+                <form id="recipe-generator-form">
                     <input type="text" placeholder="Enter an item for a Recipe" autofocus required autocomplete="off" class="instructions" id="user-instructions"/>
-                    <input type="submit" class="submit-button">
+                    <input type="submit" class="submit-button" id="submit-button">
                 </form>
                 <div class="asar">i.e:Egg, potato or cheese</div>
             </div>
@@ -28,6 +29,6 @@
             
         </footer>
     </div>
- <script src="src/main.js"></script>   
+ <script async src="src/main.js"></script>   
 </body>
 </html>
